# FlexiHook

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  readme.md
src/: BaseHook.hpp  ContextHook.hpp  MinHook.cpp  MinHook.h  Utils.hpp  main.cpp
src/FlexiHook/: BaseHook.hpp  BuilderDef.hpp  CodeBuilder.cpp  CodeBuilder.h  ContextHook.hpp  FlexiHook.hpp  ProxyHook.hpp  Utils.hpp  WrapMinHook.cpp  WrapMinHook.h  X64BuilderDef.h  X86BuilderDef.h
